--- a/app/inventario/templates/base.html
+++ b/app/inventario/templates/base.html
@@ -1,30 +1,26 @@
 {%load static%}
 <!DOCTYPE html>
 <html lang="es">
-
+    
 <head>
     <title>
-        {%block title%}
-        {%endblock%}
+        {%block title%} {%endblock%}
     </title>
-    <meta charset="UTF-8">
-    <meta name="title" content="Título de la WEB">
-    <meta name="description" content="Descripción de la WEB">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/daneden/animate.css/master/animate.css">
-    <link rel="stylesheet" href="{% static 'css/mnav.css' %}">
-    <link rel="shortcut icon" type="image/png" href="{% static 'imagenes/favicon.ico' %}"/>
-    {%block insertcss%}
-    {%endblock%}
-    {%load bootstrap4%}
-    {%bootstrap_css%}
+    <meta charset="UTF-8" />
+    <meta name="title" content="Título de la WEB" />
+    <meta name="description" content="Descripción de la WEB" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/daneden/animate.css/master/animate.css" />
+    <link rel="stylesheet" href="{% static 'css/mnav.css' %}" />
+    <link rel="shortcut icon" type="image/png" href="{% static 'imagenes/favicon.ico' %}" />
+    {%block insertcss%} {%endblock%} {%load bootstrap4%} {%bootstrap_css%}
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="main_navbar">
         <a class="navbar-brand" href="#">
             <img src="{% static 'imagenes/logo-diresa.png' %}" width="30" height="30" class="d-inline-block align-top"
-                alt="">
+                alt="" />
             DIRESA
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -58,9 +54,15 @@
                                         INGRESAR HARDWARE
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                        <li><a class="dropdown-item" href="{% url 'PCC' %}">CPU</a></li>
-                                        <li><a class="dropdown-item" href="{% url 'UC' %}">ESTABILIZADOR O UPS</a></li>
-                                        <li><a class="dropdown-item" href="{% url 'EC' %}">EQUIPO</a></li>
+                                        <li>
+                                            <a class="dropdown-item" href="{% url 'PCC' %}">CPU</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="{% url 'UC' %}">ESTABILIZADOR O UPS</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="{% url 'EC' %}">EQUIPO</a>
+                                        </li>
                                     </ul>
                                 </li>
                                 <!--<div class="dropdown-divider"></div>
@@ -72,9 +74,15 @@
                                         BUSCAR HARDWARE
                                     </a>
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">
-                                        <li><a class="dropdown-item" href="{% url 'PCR' %}">CPU</a></li>
-                                        <li><a class="dropdown-item" href="{% url 'UR' %}">ESTABILIZADOR O UPS</a></li>
-                                        <li><a class="dropdown-item" href="{% url 'ER' %}">EQUIPO</a></li>
+                                        <li>
+                                            <a class="dropdown-item" href="{% url 'PCR' %}">CPU</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="{% url 'UR' %}">ESTABILIZADOR O UPS</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="{% url 'ER' %}">EQUIPO</a>
+                                        </li>
                                     </ul>
                                 </li>
                                 <!--<div class="dropdown-divider"></div>
@@ -100,11 +108,15 @@
                                             </ul>
                                         </li>
                                         <div class="dropdown-divider"></div>-->
-                                <li><a class="dropdown-item" href="{% url 'SC' %}">INGRESAR SOFTWARE</a></li>
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'SC' %}">INGRESAR SOFTWARE</a>
+                                </li>
                                 <!--<div class="dropdown-divider"></div>
                                     <li><a class="dropdown-item" href="#">ACTUALIZAR SOFTWARE</a></li>-->
                                 <div class="dropdown-divider"></div>
-                                <li><a class="dropdown-item" href="{% url 'SR' %}">BUSCAR SOFTWARE</a></li>
+                                <li>
+                                    <a class="dropdown-item" href="{% url 'SR' %}">BUSCAR SOFTWARE</a>
+                                </li>
                                 <!--<div class="dropdown-divider"></div>
                                     <li><a class="dropdown-item" href="#">ELIMINAR SOFTWARE</a></li>-->
                             </ul>
@@ -118,19 +130,14 @@
             </form>-->
         </div>
     </nav>
-
-
-    {%block content%}
-    {%endblock%}
-    {% bootstrap_javascript jquery='full' %}
-    {%block insertjs%}
-    {%endblock%}
+    {%block content%} {%endblock%} {% bootstrap_javascript jquery='full' %}
+    {%block insertjs%} {%endblock%}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="{% static 'js/navu.js' %}"></script>
     <script>
         $(function () {
-            $('#main_navbar').bootnavbar();
-        })
+            $("#main_navbar").bootnavbar();
+        });
     </script>
 </body>
 
