--- a/app/inventario/static/css/usr.css
+++ b/app/inventario/static/css/usr.css
@@ -41,7 +41,7 @@ select,
 textarea {
   color: black !important;
   font-size: 18px;
-  border-color: black !important;
+  border-color: gray !important;
 }
 
 td {
