--- a/app/inventario/templates/Login/Login.html
+++ b/app/inventario/templates/Login/Login.html
@@ -30,12 +30,14 @@
           </div>
           <div class="modal-body">
             <form action="">
+              {% csrf_token %}
               <div class="form-group row">
                 <label for="" class="col-sm-3 col-form-label">Usuario: </label>
                 <div class="col-sm-9">
                   <input
                     type="text"
                     class="form-control"
+                    id="usuario"
                     placeholder="Usuario"
                   />
                 </div>
@@ -48,12 +50,13 @@
                   <input
                     type="password"
                     class="form-control"
+                    id="password"
                     placeholder="Contraseña"
                   />
                 </div>
               </div>
               <div class="form-group row">
-                <button type="submit" class="btn btn-primary btn-lg">
+                <button type="submit" class="btn btn-primary btn-lg" id="botonLogin">
                   INGRESAR
                 </button>
               </div>
@@ -63,4 +66,6 @@
       </div>
     </div>
   </body>
+  {% bootstrap_javascript jquery='full' %}
+  <script src="{% static 'js/jqlog.js' %}"></script>
 </html>
