--- a/app/inventario/templates/Login/Login.html
+++ b/app/inventario/templates/Login/Login.html
@@ -26,9 +26,11 @@
               src="{%static 'imagenes/logo-diresa.png'%}"
               class="imagen-login"
             />
-            <h5 class="modal-title">INICIO DE SESION</h5>
+            <h1 class="modal-title">INICIO DE SESION</h1>
           </div>
           <div class="modal-body">
+            <div id="error">
+            </div>
             <form action="">
               {% csrf_token %}
               <div class="form-group row">
@@ -56,9 +58,13 @@
                 </div>
               </div>
               <div class="form-group row">
-                <button type="submit" class="btn btn-primary btn-lg" id="botonLogin">
-                  INGRESAR
-                </button>
+                <label for="" class="col-sm-3 col-form-label">
+                </label>
+                <div class="col-sm-9">
+                  <button type="button" class="btn btn-primary btn-lg" id="botonLogin">
+                    INGRESAR
+                  </button>
+                </div>
               </div>
             </form>
           </div>
@@ -68,4 +74,5 @@
   </body>
   {% bootstrap_javascript jquery='full' %}
   <script src="{% static 'js/jqlog.js' %}"></script>
+  <script src="{% static 'js/js.cookie.js' %}"></script>
 </html>
