--- a/app/inventario/Templates/Hardware/HardwarePC/PCR.html
+++ b/app/inventario/Templates/Hardware/HardwarePC/PCR.html
@@ -72,7 +72,7 @@
 </div>
 {%endblock%}
 {%block insertjs%}
-<script src="{% static 'js/jqrnw.js' %}"></script>
+<script src="{% static 'js/jqnw.js' %}"></script>
 <script src="{% static 'js/jqrpc.js' %}"></script>
 <script src="{% static 'alertifyjs/alertify.js' %}"></script>
 {%endblock%}
