--- a/app/inventario/Templates/Hardware/HardwareEquipo/EC.html
+++ b/app/inventario/Templates/Hardware/HardwareEquipo/EC.html
@@ -9,144 +9,98 @@ Harware {%endblock%} {%block insertcss%}
         <h1>INVENTARIO HARDWARE: EQUIPO</h1>
       </div>
       {%if messages%} {%for message in messages%}
-      <div
-        id="Message"
-        {%
-        if
-        message.tags
-        %}
-        class="{{message.tags}}"
-        {%endif%}
-        role="alert"
-      ></div>
-        {{message}}
-      </div>
-      {%endfor%}{%endif%}
-      <form class="col-12" action="/Hardware/Equipo/EC/" method="POST">
-        {% csrf_token %}
-        <div class="form-group row">
-          <label for="" class="col-4 col-form-label">Nombre del Equipo:</label>
-          <div class="col-8">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Impresora Multifuncional"
-              id="nombre_equipo"
-              name="nombre_equipo"
-              maxlength="25"
-              required
-            />
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="" class="col-4 col-form-label">Marca:</label>
-          <div class="col-8">
-            <input
-              type="text"
-              class="form-control"
-              id="marca_equipo"
-              placeholder="Epson"
-              name="marca_equipo"
-              maxlength="25"
-            />
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="" class="col-4 col-form-label">Modelo:</label>
-          <div class="col-8">
-            <input
-              type="text"
-              class="form-control"
-              name="modelo_equipo"
-              id="modelo_equipo"
-              maxlength="25"
-            />
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="" class="col-4 col-form-label">Estado:</label>
-          <div class="col-8">
-            <select id="estado_equipo" class="form-control" name="estado_equipo">
-              <option value="Nuevo" selected>Nuevo</option>
-              <option value="Regular">Regular</option>
-              <option value="Malo">Malo</option>
-            </select>
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="" class="col-4 col-form-label">Numero de Serie:</label>
-          <div class="col-8">
-            <input
-              type="text"
-              class="form-control"
-              name="numero_serie"
-              id="numero_serie"
-              maxlength="15"
-              onkeypress="return event.charCode >= 46 && event.charCode <= 57"
-            />
-          </div>
-        </div>
-
-        <div class="form-group row">
-          <label for="" class="col-4 col-form-label">Codigo Activo:</label>
-          <div class="col-8">
-            <input
-              type="text"
-              class="form-control"
-              name="codigo_activo"
-              id="codigo_activo"
-              maxlength="12"
-              onkeypress="return event.charCode >= 46 && event.charCode <= 57"
-            />
-          </div>
-        </div>
-
-        <div class="form-group row">
-          <label for="" class="col-4 col-form-label">Descripcion:</label>
-          <div class="col-8">
-            <textarea
-              class="form-control"
-              maxlength="50"
-              name="descripcion"
-              id="descripcion"
-              cols="30"
-              rows="2"
-            ></textarea>
-          </div>
-        </div>
-
-        <div class="form-group row">
-          <label for="" class="col-4 col-form-label">Area:</label>
-          <div class="col-8">
-            <select id="sarea" class="form-control" name="">
-              {%for q in queryarea%} {% if forloop.first %}
-              <option value="{{q.id_area}}" selected>{{q.nombre_area}}</option>
-              {%else%}
-              <option value="{{q.id_area}}">{{q.nombre_area}}</option>
-              {% endif %} {%endfor%}
-            </select>
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="" class="col-4 col-form-label">Empleado Final</label>
-          <div class="col-8">
-            <select id="sempleado" class="form-control" name="dni_empleado">
-            </select>
-          </div>
-        </div>
-
-        <div class="form-group row">
-          <label for="" class="col-4 col-form-label"></label>
-          <div class="col-8">
-            <button type="submit" class="btn btn-primary mg-2 form-control">
-              <i class="fas fa-sign-in-alt"></i> Registrar al Inventario
-            </button>
-          </div>
-        </div>
-      </form>
+      <div id="Message" {% if message.tags %} class="{{message.tags}}" {%endif%} role="alert"></div>
+      {{message}}
     </div>
+    {%endfor%}{%endif%}
+    <form class="col-12" action="/Hardware/Equipo/EC/" method="POST">
+      {% csrf_token %}
+      <div class="form-group row">
+        <label for="" class="col-4 col-form-label">Nombre del Equipo:</label>
+        <div class="col-8">
+          <input type="text" class="form-control" placeholder="Impresora Multifuncional" id="nombre_equipo"
+            name="nombre_equipo" maxlength="25" required />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="" class="col-4 col-form-label">Marca:</label>
+        <div class="col-8">
+          <input type="text" class="form-control" id="marca_equipo" placeholder="Epson" name="marca_equipo"
+            maxlength="25" />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="" class="col-4 col-form-label">Modelo:</label>
+        <div class="col-8">
+          <input type="text" class="form-control" name="modelo_equipo" id="modelo_equipo" maxlength="25" />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="" class="col-4 col-form-label">Estado:</label>
+        <div class="col-8">
+          <select id="estado_equipo" class="form-control" name="estado_equipo">
+            <option value="Nuevo" selected>Nuevo</option>
+            <option value="Regular">Regular</option>
+            <option value="Malo">Malo</option>
+          </select>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="" class="col-4 col-form-label">Numero de Serie:</label>
+        <div class="col-8">
+          <input type="text" class="form-control" name="numero_serie" id="numero_serie" maxlength="15"
+            onkeypress="return event.charCode >= 46 && event.charCode <= 57" />
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="" class="col-4 col-form-label">Codigo Activo:</label>
+        <div class="col-8">
+          <input type="text" class="form-control" name="codigo_activo" id="codigo_activo" maxlength="12"
+            onkeypress="return event.charCode >= 46 && event.charCode <= 57" />
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="" class="col-4 col-form-label">Descripcion:</label>
+        <div class="col-8">
+          <textarea class="form-control" maxlength="50" name="descripcion" id="descripcion" cols="30"
+            rows="2"></textarea>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="" class="col-4 col-form-label">Area:</label>
+        <div class="col-8">
+          <select id="sarea" class="form-control" name="">
+            {%for q in queryarea%} {% if forloop.first %}
+            <option value="{{q.id_area}}" selected>{{q.nombre_area}}</option>
+            {%else%}
+            <option value="{{q.id_area}}">{{q.nombre_area}}</option>
+            {% endif %} {%endfor%}
+          </select>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="" class="col-4 col-form-label">Empleado Final</label>
+        <div class="col-8">
+          <select id="sempleado" class="form-control" name="dni_empleado">
+          </select>
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label for="" class="col-4 col-form-label"></label>
+        <div class="col-8">
+          <button type="submit" class="btn btn-primary mg-2 form-control">
+            <i class="fas fa-sign-in-alt"></i> Registrar al Inventario
+          </button>
+        </div>
+      </div>
+    </form>
   </div>
-  {%endblock%} {%block insertjs%}
-  <script src="{% static 'js/jqnw.js' %}"></script>
-  {%endblock%}
+</div>
+{%endblock%} {%block insertjs%}
+<script src="{% static 'js/jqnw.js' %}"></script>
+{%endblock%}
 </div>
