--- a/app/inventario/Templates/Hardware/HardwarePC/PCC.html
+++ b/app/inventario/Templates/Hardware/HardwarePC/PCC.html
@@ -9,16 +9,7 @@ Harware {%endblock%} {%block insertcss%}
         <h1>INVENTARIO HARDWARE: PC</h1>
       </div>
       {%if messages%} {%for message in messages%}
-      <div
-        id="Message"
-        {%
-        if
-        message.tags
-        %}
-        class="{{message.tags}}"
-        {%endif%}
-        role="alert"
-      >
+      <div id="Message" {% if message.tags %} class="{{message.tags}}" {%endif%} role="alert">
         {{message}}
       </div>
       {%endfor%} {%endif%}
@@ -27,83 +18,42 @@ Harware {%endblock%} {%block insertcss%}
         <div class="form-group row">
           <label for="" class="col-4 col-form-label">Procesador:</label>
           <div class="col-8">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Intel Core I7 3330"
-              id="procesador_pc"
-              name="procesador_pc"
-              maxlength="20"
-              required
-            />
+            <input type="text" class="form-control" placeholder="Intel Core I7 3330" id="procesador_pc"
+              name="procesador_pc" maxlength="20" required />
           </div>
         </div>
         <div class="form-group row">
           <label for="" class="col-4 col-form-label">Velocidad:</label>
           <div class="col-8">
-            <input
-              type="text"
-              class="form-control"
-              id="velocidad_pc"
-              placeholder="3.00 GHz"
-              name="velocidad_pc"
-              maxlength="10"
-              required
-            />
+            <input type="text" class="form-control" id="velocidad_pc" placeholder="3.00 GHz" name="velocidad_pc"
+              maxlength="10" required />
           </div>
         </div>
         <div class="form-group row">
           <label for="" class="col-4 col-form-label">Memoria Ram:</label>
           <div class="col-8">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="16GB"
-              id="memoria_ram"
-              name="memoria_ram"
-              maxlength="7"
-              required
-            />
+            <input type="text" class="form-control" placeholder="16GB" id="memoria_ram" name="memoria_ram" maxlength="7"
+              required />
           </div>
         </div>
         <div class="form-group row">
           <label for="" class="col-4 col-form-label">Almacenamiento:</label>
           <div class="col-8">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="1TB O 500GB"
-              id="almacenamiento"
-              name="almacenamiento"
-              maxlength="7"
-              required
-            />
+            <input type="text" class="form-control" placeholder="1TB O 500GB" id="almacenamiento" name="almacenamiento"
+              maxlength="7" required />
           </div>
         </div>
         <div class="form-group row">
           <label for="" class="col-4 col-form-label">Tarjeta de Video:</label>
           <div class="col-8">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Asus GForce GT 1030"
-              id="tarjeta_video"
-              name="tarjeta_video"
-              maxlength="15"
-            />
+            <input type="text" class="form-control" placeholder="Asus GForce GT 1030" id="tarjeta_video"
+              name="tarjeta_video" maxlength="15" />
           </div>
         </div>
         <div class="form-group row">
           <label for="" class="col-4 col-form-label">Marca:</label>
           <div class="col-8">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Lenovo"
-              id="marca"
-              name="marca"
-              maxlength="8"
-            />
+            <input type="text" class="form-control" placeholder="Lenovo" id="marca" name="marca" maxlength="8" />
           </div>
         </div>
         <div class="form-group row">
@@ -120,41 +70,23 @@ Harware {%endblock%} {%block insertcss%}
         <div class="form-group row">
           <label for="" class="col-4 col-form-label">Numero de Serie:</label>
           <div class="col-8">
-            <input
-              type="text"
-              class="form-control"
-              name="numero_serie"
-              id="numero_serie"
-              maxlength="15"
-              onkeypress="return event.charCode >= 46 && event.charCode <= 57"
-            />
+            <input type="text" class="form-control" name="numero_serie" id="numero_serie" maxlength="15"
+              onkeypress="return event.charCode >= 46 && event.charCode <= 57" />
           </div>
         </div>
 
         <div class="form-group row">
           <label for="" class="col-4 col-form-label">Modelo:</label>
           <div class="col-8">
-            <input
-              type="text"
-              class="form-control"
-              name="modelo"
-              id="modelo"
-              maxlength="15"
-            />
+            <input type="text" class="form-control" name="modelo" id="modelo" maxlength="15" />
           </div>
         </div>
 
         <div class="form-group row">
           <label for="" class="col-4 col-form-label">Codigo Activo:</label>
           <div class="col-8">
-            <input
-              type="text"
-              class="form-control"
-              name="codigo_activo"
-              id="codigo_activo"
-              maxlength="12"
-              onkeypress="return event.charCode >= 46 && event.charCode <= 57"
-            />
+            <input type="text" class="form-control" name="codigo_activo" id="codigo_activo" maxlength="12"
+              onkeypress="return event.charCode >= 46 && event.charCode <= 57" />
           </div>
         </div>
 
