--- a/app/inventario/Templates/Hardware/HardwareUps/UC.html
+++ b/app/inventario/Templates/Hardware/HardwareUps/UC.html
@@ -9,16 +9,7 @@ Harware {%endblock%} {%block insertcss%}
         <h1>INVENTARIO HARDWARE: ESTABILIZADOR O UPS</h1>
       </div>
       {%if messages%} {%for message in messages%}
-      <div
-        id="Message"
-        {%
-        if
-        message.tags
-        %}
-        class="{{message.tags}}"
-        {%endif%}
-        role="alert"
-      >
+      <div id="Message" {% if message.tags %} class="{{message.tags}}" {%endif%} role="alert">
         {{message}}
       </div>
       {%endfor%} {%endif%}
@@ -27,41 +18,22 @@ Harware {%endblock%} {%block insertcss%}
         <div class="form-group row">
           <label for="" class="col-4 col-form-label">Marca del Equipo:</label>
           <div class="col-8">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="APC"
-              id="marca_estabilizador"
-              name="marca_estabilizador"
-              maxlength="15"
-              required
-            />
+            <input type="text" class="form-control" placeholder="APC" id="marca_estabilizador"
+              name="marca_estabilizador" maxlength="15" required />
           </div>
         </div>
         <div class="form-group row">
           <label for="" class="col-4 col-form-label">Potencia en Watts:</label>
           <div class="col-8">
-            <input
-              type="text"
-              class="form-control"
-              id="potencia_watts"
-              placeholder="10k Watts"
-              name="potencia_watts"
-              maxlength="10"
-            />
+            <input type="text" class="form-control" id="potencia_watts" placeholder="10k Watts" name="potencia_watts"
+              maxlength="10" />
           </div>
         </div>
         <div class="form-group row">
           <label for="" class="col-4 col-form-label">Potencia en VA:</label>
           <div class="col-8">
-            <input
-              type="text"
-              class="form-control"
-              name="potencia_va"
-              id="potencia_va"
-              placeholder="1000 VA"
-              maxlength="10"
-            />
+            <input type="text" class="form-control" name="potencia_va" id="potencia_va" placeholder="1000 VA"
+              maxlength="10" />
           </div>
         </div>
         <div class="form-group row">
@@ -77,39 +49,23 @@ Harware {%endblock%} {%block insertcss%}
         <div class="form-group row">
           <label for="" class="col-4 col-form-label">Numero de Serie:</label>
           <div class="col-8">
-            <input
-              type="text"
-              class="form-control"
-              name="numero_serie"
-              id="numero_serie"
-              maxlength="15"
-              onkeypress="return event.charCode >= 46 && event.charCode <= 57"
-            />
+            <input type="text" class="form-control" name="numero_serie" id="numero_serie" maxlength="15"
+              onkeypress="return event.charCode >= 46 && event.charCode <= 57" />
           </div>
         </div>
 
         <div class="form-group row">
           <label for="" class="col-4 col-form-label">Codigo Activo:</label>
           <div class="col-8">
-            <input
-              type="text"
-              class="form-control"
-              name="codigo_activo"
-              id="codigo_activo"
-              maxlength="12"
-              onkeypress="return event.charCode >= 46 && event.charCode <= 57"
-            />
+            <input type="text" class="form-control" name="codigo_activo" id="codigo_activo" maxlength="12"
+              onkeypress="return event.charCode >= 46 && event.charCode <= 57" />
           </div>
         </div>
 
         <div class="form-group row">
           <label for="" class="col-4 col-form-label">Estado:</label>
           <div class="col-8">
-            <select
-              id="sestado"
-              class="form-control"
-              name="estado_estabilizador"
-            >
+            <select id="sestado" class="form-control" name="estado_estabilizador">
               <option value="Nuevo" selected>Nuevo</option>
               <option value="Regular">Regular</option>
               <option value="Malo">Malo</option>
