--- a/app/inventario/Templates/Hardware/HardwareUps/UC.html
+++ b/app/inventario/Templates/Hardware/HardwareUps/UC.html
@@ -15,13 +15,30 @@ Harware {%endblock%} {%block insertcss%}
       {%endfor%} {%endif%}
       <form class="col-12" action="/Hardware/Estabilizador/UC/" method="POST">
         {% csrf_token %}
+
+        <div class="form-group row">
+          <label for="" class="col-4 col-form-label">Tipo de Equipo:</label>
+          <div class="col-8">
+            <select id="tipo_estabilizador" class="form-control" name="tipo_estabilizador">
+              <option value="Estabilizador" selected>Estabilizador</option>
+              <option value="UPS">UPS</option>
+            </select>
+          </div>
+        </div>
+
         <div class="form-group row">
           <label for="" class="col-4 col-form-label">Marca del Equipo:</label>
           <div class="col-8">
-            <input type="text" class="form-control" placeholder="APC" id="marca_estabilizador"
-              name="marca_estabilizador" maxlength="15" required />
+            <select id="smarca" class="form-control" name="marca_estabilizador">
+              {%for q in querymarca%} {% if forloop.first %}
+              <option value="{{q.id_marca}}" selected>{{q.nombre_marca}}</option>
+              {%else%}
+              <option value="{{q.id_marca}}">{{q.nombre_marca}}</option>
+              {% endif %} {%endfor%}
+            </select>
           </div>
         </div>
+
         <div class="form-group row">
           <label for="" class="col-4 col-form-label">Potencia en Watts:</label>
           <div class="col-8">
@@ -34,15 +51,6 @@ Harware {%endblock%} {%block insertcss%}
           <div class="col-8">
             <input type="text" class="form-control" name="potencia_va" id="potencia_va" placeholder="1000 VA"
               maxlength="10" />
-          </div>
-        </div>
-        <div class="form-group row">
-          <label for="" class="col-4 col-form-label">Tipo de Equipo:</label>
-          <div class="col-8">
-            <select id="tipo_estabilizador" class="form-control" name="tipo_estabilizador">
-              <option value="Estabilizador" selected>Estabilizador</option>
-              <option value="UPS">UPS</option>
-            </select>
           </div>
         </div>
 
