--- a/app/inventario/Templates/Hardware/HardwareUps/UU.html
+++ b/app/inventario/Templates/Hardware/HardwareUps/UU.html
@@ -20,27 +20,7 @@
             {%endif%}
             <form class="col-12" action="/Hardware/Estabilizador/Actualizar/{{querys.id_estabilizador}}/" method="POST">
                 {% csrf_token %}
-                <div class="form-group row">
-                    <label for="" class="col-4 col-form-label">Marca del Equipo:</label>
-                    <div class="col-8">
-                        <input type="text" class="form-control" value="{{querys.marca_estabilizador}}" id="codigoactivo"
-                            name="marca_estabilizador" maxlength="15" required>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="" class="col-4 col-form-label">Potencia en Watts:</label>
-                    <div class="col-8">
-                        <input type="text" class="form-control" id="codigoactivo" value="{{querys.potencia_watts}}"
-                            name="potencia_watts" maxlength="10">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="" class="col-4 col-form-label">Potencia en VA:</label>
-                    <div class="col-8">
-                        <input type="text" class="form-control" name="potencia_va" value="{{querys.potencia_va}}"
-                            maxlength="10">
-                    </div>
-                </div>
+
                 <div class="form-group row">
                     <label for="" class="col-4 col-form-label">Tipo de Equipo:</label>
                     <div class="col-8">
@@ -55,6 +35,35 @@
                         </select>
                     </div>
                 </div>
+
+                <div class="form-group row">
+                    <label for="" class="col-4 col-form-label">Marca del Equipo:</label>
+                    <div class="col-8">
+                      <select id="smarca" class="form-control" name="marca_estabilizador">
+                        {%for q in querymarca%} {% if querys.marca_estabilizador == q.id_marca %}
+                        <option value="{{q.id_marca}}" selected>{{q.nombre_marca}}</option>
+                        {%else%}
+                        <option value="{{q.id_marca}}">{{q.nombre_marca}}</option>
+                        {% endif %} {%endfor%}
+                      </select>
+                    </div>
+                  </div>
+    
+                <div class="form-group row">
+                    <label for="" class="col-4 col-form-label">Potencia en Watts:</label>
+                    <div class="col-8">
+                        <input type="text" class="form-control" id="codigoactivo" value="{{querys.potencia_watts}}"
+                            name="potencia_watts" maxlength="10">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="" class="col-4 col-form-label">Potencia en VA:</label>
+                    <div class="col-8">
+                        <input type="text" class="form-control" name="potencia_va" value="{{querys.potencia_va}}"
+                            maxlength="10">
+                    </div>
+                </div>
+                
 
                 <div class="form-group row">
                     <label for="" class="col-4 col-form-label">Numero de Serie:</label>
